# muic_vending_machine

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  db.py  main.py  models.py
src/: Dockerfile  requirements.txt
src/app/: config.py  constants.py  db.py  main.py
src/app/routers/: products.py  stocks.py  vending_machines.py
