[tool.poetry]
name = "muic_vending_machine"
version = "0.1.0"
description = ""
authors = ["The Gang Technology"]

[tool.poetry.dependencies]
python = ">=3.11.1,<4.0"
asyncpg = "^0.27.0"
fastapi = "^0.89.1"
ormar = "^0.12.0"
psycopg2-binary = "^2.9.5"
uvicorn = "0.20.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.0.2"
flake8 = "^5.0.1"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
ipykernel = "^6.15.1"
flake8-annotations = "^3.0.0"
flake8-eradicate = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120

[tool.flake8]
line-length = 120

[virtualenvs]
create = false
